Dec 12 2005  devel  Revamped AddSource callback API into a generic SourceAction
                     API
                    Wrote drone interface channel push code
                    Added SourceAction hooks for setting hop, vectors
Dec 11 2005  devel  Added fix to ringbuf from Shane Schisler
                    Added drone_source_packet generators to drone protocol to
                     push a capture source upstream
                    Added endian-flipping to bitmap fields in drone protocol
                    Completed server side of drone interface push system
                    Fixed UUID '<' operator
                    Added remote source pushing via drone protocol, remote sources
                     now show up
                    Added purging of virtual sources when drone connection is
                     broken
Dec 10 2005  devel  Added UUID to drone protocol
                    Added LocalChannelHop() to packetsources to prevent conflicts
                     with virtual drone interfaces
                    Fixed compilation of new packetsource framework on BSD
                    Fixed div-by-0 on channel assignment to virtual stuff like
                     drones
                    Fixed breaking drones by always splitting interfaces in
                     packetsource.h
Dec 05 2005  devel  Began to add remote drone virtual sources
                    Wrote some documentation on the new PacketSource api
Dec 04 2005  devel  Major code drop:
                    - Moved root IPC for channel control out of packetsourcetracker
                    - Rewrote how packetsourcetracker and packetsources work entirely
                    - Added UUID tracking of each source
                    * This code drop is KNOWN TO BREAK on *BSD and on compiling
                      drones!  I wanted to get it off my drive and versioned,
                      more updates later tonight.
                    Fixed drone to use new packetsource framework