@@ -132,8 +132,8 @@ public:
 
 	virtual int EnableMonitor();
 	virtual int DisableMonitor();
-	virtual int SetChannel(int in_ch);
-	virtual int SetChannelSequence(vector<int> in_seq);
+	virtual int SetChannel(unsigned int in_ch);
+	virtual int SetChannelSequence(vector<unsigned int> in_seq);
 	virtual int FetchChannel();
 	
 protected:
